# Music-Telegram-Bot

./: .env.sample  .gitignore  README.md  bot.py  create_venv.sh  filter.py  gpt.py  logger.py  music.py  pyproject.toml  requirements.txt  setup.sh  test_gpt.py  utils.py
database/: message_history.py  mongo.py  user.py
music/: music.py
