[project]
name = "music-telegram-bot"
version = "0.1.0"
description = "A Telegram bot for playing music from YouTube playlists"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "annotated-types==0.6.0",
    "anyio==4.2.0",
    "Brotli==1.1.0",
    "certifi==2023.11.17",
    "charset-normalizer==3.3.2",
    "dataclasses==0.6",
    "dataclasses-json==0.6.4",
    "distro==1.9.0",
    "dnspython==2.5.0",
    "h11==0.14.0",
    "httpcore==1.0.2",
    "httpx==0.25.2",
    "idna==3.6",
    "markdown2==2.4.12",
    "marshmallow==3.20.2",
    "mutagen==1.47.0",
    "mypy-extensions==1.0.0",
    "openai==1.12.0",
    "packaging==23.2",
    "pycryptodomex==3.20.0",
    "pydantic==2.6.1",
    "pydantic_core==2.16.2",
    "pymongo==4.6.1",
    "python-dotenv==1.0.0",
    "python-telegram-bot==20.7",
    "requests==2.31.0",
    "sniffio==1.3.0",
    "tqdm==4.66.2",
    "typing-inspect==0.9.0",
    "typing_extensions==4.9.0",
    "urllib3==2.1.0",
    "websockets==12.0",
    "pytubefix==9.1.1",
]

[tool.uv]
dev-dependencies = [] 